// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Pagination Cozy 1`] = `
<div
  style="height: 200px"
>
  
    
  <div
    class="fd-pagination"
  >
    
        
    <div
      class="fd-pagination__per-page"
    >
      
            
      <label
        class="fd-form-label fd-pagination__per-page-label"
        id="selectLabel"
      >
        Results per page: 
      </label>
      

            
      <div
        class="fd-popover"
      >
        
                
        <div
          class="fd-popover__control"
        >
          
                    
          <div
            class="fd-select"
          >
            
                        
            <button
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-labelledby="selectLabel selectValue"
              class="fd-select__control"
              id="compactSelectCombobox"
              onclick="
                                        toggleElAttrs('h0C6A327', ['aria-hidden']);
                                        toggleElAttrs('selectCombobox', ['aria-expanded']);
                                    "
              tabindex="0"
            >
              
                            
              <span
                class="fd-select__text-content"
                id="selectValue"
              >
                4
              </span>
              
                            
              <span
                class="fd-button fd-button--transparent fd-select__button"
              >
                
                                
                <i
                  class="sap-icon--slim-arrow-down"
                />
                
                            
              </span>
              
                        
            </button>
            
                    
          </div>
          
                
        </div>
        

                
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
          id="h0C6A327"
        >
          
                    
          <ul
            aria-activedescendant="selectCombobox-currentlyFocusedItem"
            aria-labelledby="selectLabel"
            class="fd-list fd-list--dropdown fd-list"
            role="listbox"
          >
            
                        
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              id="selectCombobox-currentlyFocusedItem"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                4
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                8
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                16
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                32
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    

        
    <nav
      aria-label="cozy mode example, pagination with more than 9 pages"
      class="fd-pagination__nav"
      role="navigation"
    >
      
            
      <a
        aria-disabled="false"
        aria-label="First page"
        class="fd-button fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="false"
        aria-label="Previous page"
        class="fd-button fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
            
      </a>
      

            
      <a
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

            
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

            
      <a
        aria-label="Goto page 494"
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        494
      </a>
      

            
      <a
        aria-label="Goto page 495"
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        495
      </a>
      

            
      <a
        aria-label="Goto page 496"
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        496
      </a>
      

            
      <a
        aria-label="Goto page 497"
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        497
      </a>
      

            
      <a
        aria-label="Goto page 498"
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        498
      </a>
      

            
      <a
        aria-label="Goto page 499"
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        499
      </a>
      

            
      <label
        aria-label="Page input, Current page, Page 500"
        class="fd-form-label fd-pagination__label"
        id="cozyPageInputPage"
      >
        Page:
      </label>
      

            
      <input
        aria-labelledby="cozyPageInputPage cozyPageInputOf"
        class="fd-input fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="500"
      />
      

            
      <label
        class="fd-form-label fd-pagination__label"
        id="cozyPageInputOf"
      >
        of 500
      </label>
      

            
      <a
        aria-disabled="true"
        aria-label="Next page"
        class="fd-button fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="true"
        aria-label="Last page"
        class="fd-button fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
            
      </a>
      
        
    </nav>
    

        
    <div
      class="fd-pagination__total"
    >
      
            
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Pagination First page 1`] = `
<section>
  <h3>
    &gt; 9 Pages
  </h3>
  

  <div
    class="fd-pagination"
  >
    
    
    <nav
      aria-label="first page example, pagination with more than 9 pages"
      class="fd-pagination__nav"
      role="navigation"
    >
      
        
      <a
        aria-disabled="true"
        aria-label="First page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="true"
        aria-label="Previous page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <label
        aria-label="Page input, Current page, Page 1"
        class="fd-form-label fd-pagination__label"
        id="firstPageInputPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="firstPageInputPage firstPageInputOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="1"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="firstPageInputOf"
      >
        of 500
      </label>
      

        
      <a
        aria-label="Goto page 2"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        2
      </a>
      

        
      <a
        aria-label="Goto page 3"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        3
      </a>
      

        
      <a
        aria-label="Goto page 4"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        4
      </a>
      

        
      <a
        aria-label="Goto page 5"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        5
      </a>
      

        
      <a
        aria-label="Goto page 6"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        6
      </a>
      

        
      <a
        aria-label="Goto page 7"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        7
      </a>
      

        
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

        
      <a
        aria-label="Goto page 500"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        500
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Next page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Last page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
    
    </div>
    

  </div>
  


  <h3>
    &lt; 9 Pages
  </h3>
  


  <div
    class="fd-pagination fd-pagination--short"
  >
    
    
    <nav
      aria-label="first page example, pagination with less than 9 pages"
      class="fd-pagination__nav"
      role="navigation"
    >
      
        
      <a
        aria-disabled="true"
        aria-label="First page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="true"
        aria-label="Previous page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <label
        aria-label="Page input, Current page, Page 1"
        class="fd-form-label fd-pagination__label"
        id="firstPageInputShortPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="firstPageInputShortPage firstPageInputShortOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="3"
        min="1"
        required=""
        type="number"
        value="1"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="firstPageInputShortOf"
      >
        of 3
      </label>
      

        
      <a
        aria-current="true"
        aria-label="Current Page, Page 1"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link is-active"
        href="#"
      >
        1
      </a>
      

        
      <a
        aria-label="Goto page 2"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        2
      </a>
      

        
      <a
        aria-label="Goto page 3"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        3
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Next page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Last page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        3 Results
      </span>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Pagination Last page 1`] = `
<section>
  <h3>
    &gt; 9 Pages
  </h3>
  

  <div
    class="fd-pagination"
  >
    
    
    <nav
      aria-label="last page example, pagination with more than 9 pages"
      class="fd-pagination__nav"
      role="navigation"
    >
      
        
      <a
        aria-disabled="false"
        aria-label="First page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Previous page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-label="Goto page 1"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

        
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

        
      <a
        aria-label="Goto page 494"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        494
      </a>
      

        
      <a
        aria-label="Goto page 495"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        495
      </a>
      

        
      <a
        aria-label="Goto page 496"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        496
      </a>
      

        
      <a
        aria-label="Goto page 497"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        497
      </a>
      

        
      <a
        aria-label="Goto page 498"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        498
      </a>
      

        
      <a
        aria-label="Goto page 499"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        499
      </a>
      

        
      <label
        aria-label="Page input, Current page, Page 500"
        class="fd-form-label fd-pagination__label"
        id="lastPageInputPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="lastPageInputPage lastPageInputOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="500"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="lastPageInputOf"
      >
        of 500
      </label>
      

        
      <a
        aria-disabled="true"
        aria-label="Next page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="true"
        aria-label="Last page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
    
    </div>
    

  </div>
  


  <h3>
    &lt; 9 Pages
  </h3>
  


  <div
    class="fd-pagination fd-pagination--short"
  >
    
    
    <nav
      aria-label="last page example, pagination with less than 9 pages"
      class="fd-pagination__nav"
      role="navigation"
    >
      
        
      <a
        aria-disabled="false"
        aria-label="First page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Previous page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-label="Goto page 1"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

        
      <a
        aria-label="Goto page 2"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        2
      </a>
      

        
      <a
        aria-current="true"
        aria-label="Current Page, page 3"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link is-active"
        href="#"
      >
        3
      </a>
      

        
      <label
        aria-label="Page input, Current page, Page 3"
        class="fd-form-label fd-pagination__label"
        id="lastPageInputShortPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="lastPageInputShortPage lastPageInputShortOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="3"
        min="1"
        required=""
        type="number"
        value="3"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="lastPageInputShortOf"
      >
        of 3
      </label>
      

        
      <a
        aria-disabled="true"
        aria-label="Next page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="true"
        aria-label="Last page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        3 Results
      </span>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Pagination Middle pages 1`] = `
<section>
  <h3>
    &gt; 9 Pages
  </h3>
  

  <div
    class="fd-pagination"
  >
    
    
    <nav
      aria-label="middle page example, pagination with more than 9 pages"
      class="fd-pagination__nav"
      role="navigation"
    >
      
        
      <a
        aria-disabled="false"
        aria-label="First page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Previous page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-label="Goto page 1"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

        
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

        
      <a
        aria-label="Goto page 298"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        298
      </a>
      

        
      <a
        aria-label="Goto page 299"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        299
      </a>
      

        
      <label
        aria-label="Page input, Current page, Page 300"
        class="fd-form-label fd-pagination__label"
        id="middlePageInputPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="middlePageInputPage middlePageInputOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="300"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="middlePageInputOf"
      >
        of 500
      </label>
      

        
      <a
        aria-label="Goto page 301"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        301
      </a>
      

        
      <a
        aria-label="Goto page 302"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        302
      </a>
      

        
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

        
      <a
        aria-label="Goto page 500"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        500
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Next page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Last page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
    
    </div>
    

  </div>
  


  <h3>
    &lt; 9 Pages
  </h3>
  


  <div
    class="fd-pagination fd-pagination--short"
  >
    
    
    <nav
      aria-label="middle page example, pagination with less than 9 pages"
      class="fd-pagination__nav"
      role="navigation"
    >
      
        
      <a
        aria-disabled="false"
        aria-label="First page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Previous page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-label="Goto page 1"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

        
      <a
        aria-current="true"
        aria-label="Current page, Page 2"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link is-active"
        href="#"
      >
        2
      </a>
      

        
      <label
        aria-label="Page input, Current page, Page 1"
        class="fd-form-label fd-pagination__label"
        id="middlePageInputShortPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="middlePageInputShortPage middlePageInputShortOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="3"
        min="1"
        required=""
        type="number"
        value="2"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="middlePageInputShortOf"
      >
        of 3
      </label>
      

        
      <a
        aria-label="Goto page 3"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        3
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Next page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Last page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        3 Results
      </span>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Pagination Mobile 1`] = `
<div
  style="height: 200px;"
>
  
    
  <div
    class="fd-pagination fd-pagination--mobile"
  >
    
        
    <div
      class="fd-pagination__per-page"
    >
      
            
      <label
        class="fd-form-label fd-pagination__per-page-label"
        id="selectLabel"
      >
        Results per page: 
      </label>
      

            
      <div
        class="fd-popover"
      >
        
                
        <div
          class="fd-popover__control"
        >
          
                    
          <div
            class="fd-select"
          >
            
                        
            <button
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-labelledby="selectLabel selectValue"
              class="fd-select__control"
              id="compactSelectCombobox"
              onclick="
                                        toggleElAttrs('h0C6A327', ['aria-hidden']);
                                        toggleElAttrs('selectCombobox', ['aria-expanded']);
                                    "
              tabindex="0"
            >
              
                            
              <span
                class="fd-select__text-content"
                id="selectValue"
              >
                4
              </span>
              
                            
              <span
                class="fd-button fd-button--transparent fd-select__button"
              >
                
                                
                <i
                  class="sap-icon--slim-arrow-down"
                />
                
                            
              </span>
              
                        
            </button>
            
                    
          </div>
          
                
        </div>
        

                
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
          id="h0C6A327"
        >
          
                    
          <ul
            aria-activedescendant="selectCombobox-currentlyFocusedItem"
            aria-labelledby="selectLabel"
            class="fd-list fd-list--dropdown fd-list"
            role="listbox"
          >
            
                        
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              id="selectCombobox-currentlyFocusedItem"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                4
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                8
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                16
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                32
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    

        
    <nav
      aria-label="mobile mode example, pagination with more than 9 pages"
      class="fd-pagination__nav"
      role="navigation"
    >
      
            
      <a
        aria-disabled="false"
        aria-label="First page"
        class="fd-button fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="false"
        aria-label="Previous page"
        class="fd-button fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
            
      </a>
      

            
      <label
        aria-label="Page input, Current page, Page 500"
        class="fd-form-label fd-pagination__label"
        id="mobilePageInputPage"
      >
        Page:
      </label>
      

            
      <input
        aria-labelledby="mobilePageInputPage cozyPageInputOf"
        class="fd-input fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="500"
      />
      

            
      <label
        class="fd-form-label fd-pagination__label"
        id="mobilePageInputOf"
      >
        of 500
      </label>
      

            
      <a
        aria-disabled="true"
        aria-label="Next page"
        class="fd-button fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="true"
        aria-label="Last page"
        class="fd-button fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
            
      </a>
      
        
    </nav>
    

        
    <div
      class="fd-pagination__total"
    >
      
            
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Pagination Per page 1`] = `
<div
  style="height: 175px"
>
  
    
  <div
    class="fd-pagination"
  >
    
        
    <div
      class="fd-pagination__per-page"
    >
      
            
      <label
        class="fd-form-label fd-pagination__per-page-label"
        id="compactSelectLabel"
      >
        Results per page: 
      </label>
      

            
      <div
        class="fd-popover"
      >
        
                
        <div
          class="fd-popover__control"
        >
          
                    
          <div
            class="fd-select fd-select--compact"
          >
            
                        
            <button
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-labelledby="compactSelectLabel compactSelectValue"
              class="fd-select__control"
              id="compactSelectCombobox"
              onclick="
                                        toggleElAttrs('h0C6A326', ['aria-hidden']);
                                        toggleElAttrs('compactSelectCombobox', ['aria-expanded']);
                                    "
              tabindex="0"
            >
              
                          
              <span
                class="fd-select__text-content"
                id="compactSelectValue"
              >
                4
              </span>
              
                          
              <span
                class="fd-button fd-button--transparent fd-select__button"
              >
                
                                        
                <i
                  class="sap-icon--slim-arrow-down"
                />
                
                                    
              </span>
              
                        
            </button>
            
                    
          </div>
          
                
        </div>
        

                
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
          id="h0C6A326"
        >
          
                    
          <ul
            aria-activedescendant="compactSelectCombobox-currentlyFocusedItem"
            aria-labelledby="compactSelectLabel"
            class="fd-list fd-list--dropdown fd-list--compact"
            role="listbox"
          >
            
                        
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              id="compactSelectCombobox-currentlyFocusedItem"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                4
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                8
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                16
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                32
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    

        
    <nav
      aria-label="per page page example, pagination with more than 9 pages"
      class="fd-pagination__nav"
      role="navigation"
    >
      
            
      <a
        aria-disabled="false"
        aria-label="First page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="false"
        aria-label="Previous page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
            
      </a>
      

            
      <a
        aria-label="Goto page 1"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

            
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

            
      <a
        aria-label="Goto page 494"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        494
      </a>
      

            
      <a
        aria-label="Goto page 495"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        495
      </a>
      

            
      <a
        aria-label="Goto page 496"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        496
      </a>
      

            
      <a
        aria-label="Goto page 497"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        497
      </a>
      

            
      <a
        aria-label="Goto page 498"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        498
      </a>
      

            
      <a
        aria-label="Goto page 499"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        499
      </a>
      

            
      <label
        aria-label="Page input, Current page, Page 500"
        class="fd-form-label fd-pagination__label"
        id="perPageInputPage"
      >
        Page:
      </label>
      

            
      <input
        aria-labelledby="perPageInputPage perPageInputOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="500"
      />
      

            
      <label
        class="fd-form-label fd-pagination__label"
        id="perPageInputOf"
      >
        of 500
      </label>
      

            
      <a
        aria-disabled="true"
        aria-label="Next page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="true"
        aria-label="Last page"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
            
      </a>
      
        
    </nav>
    

        
    <div
      class="fd-pagination__total"
    >
      
            
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
        
    </div>
    
    
  </div>
  

</div>
`;
